--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -12,19 +12,33 @@ h1{
 }
 
 
-p{
+div {
     background-color: rgb(186, 186, 186);
+    margin-right: auto;
+
+    /* float: left; */
+    clear: left;
+    width: 50%;
+
 }
 
+.Chicken{
+    background-color: pink;
+    margin-right: auto;
 
+    width: 10%;
+    text-align: right;
+    
+
+}
 
 .card {
     position: relative;
-    padding: 20px;
+    padding: 30px;
     border: 2px solid #333;
     width: fit-content;
-    margin: 20px auto; /* Center the card */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    margin: 20px auto;
+    box-shadow: 2px 2px 5px black;
     font-family: Arial, sans-serif;
 
 }
@@ -60,5 +74,6 @@ p{
         /* Desktop styles go here */
         background-color: white;
         font-size: 18px;
+        /* width: 30%; */
     }
 }
