--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -72,4 +72,14 @@ div {
         background-color: white;
         font-size: 18px;
     }
+
+
+    
+    .card{
+        width: 100%; /* Two cards per row with gap */
+    }
+
+
+
+
 }
