--- a/module2-solution/css/style_2.css
+++ b/module2-solution/css/style_2.css
@@ -75,21 +75,21 @@ div {
 
 /* Desktop view  */
 @media (min-width: 992px) {
-    body {
+    /* body {
         background-color: white;
         font-size: 18px;
     }
 
     .card:nth-child(1n+0) {
-        width: 48%;
+        width: 50vw;
         display: inline-block;
 
     }
 
     .card:nth-child(2n+0) {
-        width: 48%;
+        width: 50vw;
         float: left;
         display: inline-block;
-    }
+    } */
 
 }
