--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,11 +10,6 @@ h1{
     margin-bottom: 3em;
 }
 
-.menu {
-    overflow: hidden; /* Ensure the container clears floats */
-}
-
-
 .card {
     position: relative;
     padding: 30px;
@@ -27,7 +22,6 @@ h1{
     font-size: 18px;
 }
 
-
 .cardTitle {
     position: absolute;
     top: 0px; 
@@ -37,28 +31,26 @@ h1{
     font-size: 18px;
     font-weight: bold;
     border-radius: 3px;
-    margin: 0;
     border: 1px solid #333;
     text-align: center; 
     white-space: nowrap; 
     overflow: hidden; 
 }
 
-
-
 .Chicken {
     background-color: pink;
 }
 .Beef {
-    background-color: red;
+    background-color: rgb(200, 76, 76);
+    color: white;
+    
+    
 }
 .Sushi {
     background-color: yellow;
 }
 
-
-
-
+/* Mobile view is set by default  */
 
 /* Tablet view  */
 @media (min-width: 768px) and (max-width: 991px) {
