--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,72 +1,81 @@
-/* Default styles for mobile first approach (767px and below) */
+/* Base styles */
 body {
     background-color: white;
-    font-size: 14px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
-h1{
+h1 {
     text-align: center;
     margin-top: 2em;
-    margin-bottom: 3em;
+    margin-bottom: 2em;
+    font-size: 2rem;
+}
+
+.container {
+    width: 100%;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 -15px;
 }
 
 .card {
     position: relative;
-    padding: 30px;
+    padding: 20px;
     border: 2px solid #333;
-    margin: 10px ;
+    margin: 15px;
     background-color: rgb(211, 210, 210);
     box-shadow: 2px 2px 5px black;
-    font-family: Arial, sans-serif;
-    box-sizing: border-box;
     font-size: 18px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .cardTitle {
     position: absolute;
-    top: 0px; 
-    right: 0px;
-    width: 120px; 
-    padding: 4px;
+    top: 0;
+    right: 0;
+    padding: 10px;
     font-size: 18px;
     font-weight: bold;
-    border-radius: 3px;
+    text-align: center;
     border: 1px solid #333;
-    text-align: center; 
-    white-space: nowrap; 
-    overflow: hidden; 
+    border-radius: 3px;
 }
 
 .Chicken {
     background-color: pink;
 }
+
 .Beef {
     background-color: rgb(200, 76, 76);
     color: white;
-    
-    
 }
+
 .Sushi {
     background-color: yellow;
 }
 
-/* Mobile view is set by default  */
+/* Mobile first styles (default for mobile) */
+.col-sm-12 {
+    width: 100%;
+}
 
-/* Tablet view  */
-@media (min-width: 768px) and (max-width: 991px) {
-    .card:nth-child(1n+0) {
-        display: inline-block;
-        width: calc(50% - 22px);
-    }
-    .card:nth-child(3n+0) {
-        width:auto;
-    }
-}  
-
-/* Desktop view  */
-@media (min-width: 992px) {
-    .card {
-        width: 30vw;
-        display: inline-block;
+/* Tablet view (min-width: 768px) */
+@media (min-width: 768px) {
+    .col-md-6 {
+        width: 50%;
     }
 }
+
+/* Desktop view (min-width: 992px) */
+@media (min-width: 992px) {
+    .
